--- a/public/screen.css
+++ b/public/screen.css
@@ -1,12 +1,33 @@
 :root {
-  font: 16px / 1 sans-serif;
+  font-face: {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 100;
+    font-display: swap;
+    src url("https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1MmgVxFIzIXKMnyrYk.woff2") format('woff2');
+  }
 }
 
-html {
+title {
   height: 100%;
+
+}
+
+h1 {
+  padding: 1em;
+  margin-left: 0em;
+  border-right: 0em;
+  color: rgb(159, 240, 215);
+  background-color: rgb(0, 68, 255);
 }
 
 body {
   margin: 0;
   min-height: 100%;
+}
+
+li {
+  text-indent: 5mm;
+  text-emphasis-color: red;
+  
 }
